# pandora-mainnet

./: Anchor.toml
programs/pandora/: Cargo.toml
programs/pandora/src/: lib.rs
tests/: pandora.ts
