[package]
name = "pandora"
version = "0.1.0"
description = "on-chain raffles for dark ecosystem"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pandora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
